--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -102,11 +102,12 @@
     <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.7/dist/loadingoverlay.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     
-    <!-- Application Scripts -->
-    <script src="~/js/sidebar.js" asp-append-version="true"></script>
-    <script src="~/js/ui-utils.js" asp-append-version="true"></script>
-    <script src="~/js/page-enhancements.js" asp-append-version="true"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+           <!-- Application Scripts -->
+           <script src="~/js/sidebar.js" asp-append-version="true"></script>
+           <script src="~/js/ui-utils.js" asp-append-version="true"></script>
+           <script src="~/js/loading-overlay.js" asp-append-version="true"></script>
+           <script src="~/js/page-enhancements.js" asp-append-version="true"></script>
+           <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
